Closed Bug 1650613 Opened 6 years ago Closed 6 years ago

about:cache shows error message: Unrecognized storage name 'appcache' in about:cache URL

Categories

(Core :: Networking: Cache, defect, P2)

defect

Tracking

()

VERIFIED FIXED
mozilla80
Tracking Status
firefox-esr68 --- unaffected
firefox-esr78 --- unaffected
firefox78 --- unaffected
firefox79 --- unaffected
firefox80 --- verified

People

(Reporter: soeren.hentzschel, Assigned: mayhemer)

References

(Regression)

Details

(Keywords: regression, regressionwindow-wanted, Whiteboard: [necko-triaged])

Attachments

(1 file)

STR:

  1. open about:cache

Expected:

Three sections: memory, disk and appcache (or only two sections if appcache support was already removed, I don't know the current state).

Actual:

No issue with the first two sections. But instead of a appcache section there is an error message:

Unrecognized storage name 'appcache' in about:cache URL

Honza, can you take a look? Valentin is on PTO

Flags: needinfo?(honzab.moz)

Maybe a regression caused by 1642602?

(In reply to Michal Novotny [:michal] from comment #2)

Maybe a regression caused by 1642602?

Yes, I never tried that storage. Taking a look.

Assignee: nobody → honzab.moz
Severity: -- → S3
Status: NEW → ASSIGNED
Flags: needinfo?(honzab.moz)
Priority: -- → P2
Regressed by: 1642602
Whiteboard: [necko-triaged]
Has Regression Range: --- → yes

Set release status flags based on info from the regressing bug 1642602

Pushed by honzab.moz@firemni.cz: https://hg.mozilla.org/integration/autoland/rev/a3e58c3e98da Fix about:cache appcache listing, let AppCacheStorage be visited with null load context info, r=michal,necko-reviewers
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla80
Flags: qe-verify+

Reproduced with Fx 80.0a1 (2020-07-04) on Windows 10.
Verified fixed with Fx 81.0a1 (2020-08-10) and Fx 80.0b6 on Windows 10 and Ubuntu 18.04

Status: RESOLVED → VERIFIED
Flags: qe-verify+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: