Bug 1650613 - Fix about:cache appcache listing, let AppCacheStorage be visited with null load context info, r=michal,necko-reviewers

Depends on D81885

Differential Revision: https://phabricator.services.mozilla.com/D82542